Bugfix: disappearing scrollbar in vertical palette

--- a/src/components/myColors/myColors.css
+++ b/src/components/myColors/myColors.css
@@ -4,7 +4,6 @@
 .adaptive-bar {
   background-color: var(--base-color-light-grey);
   display: grid;
-  align-items: center;
 }
 
 @media screen and (min-width: 1400px) {
